--- a/app/src/main/res/drawable/received_message_bg.xml
+++ b/app/src/main/res/drawable/received_message_bg.xml
@@ -1,8 +1,8 @@
 <!-- received_message_bg.xml -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
-    <corners android:radius="16dp"/>
+    <solid android:color="#F0F00B"/>
+    <corners android:radius="19dp"/>
     <padding
         android:left="10dp"
         android:top="10dp"
