--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,15 +4,16 @@
 
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:orientation="vertical">
+android:orientation="vertical"
+    android:layout_marginTop="0dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp"
+        android:padding="13dp"
         android:gravity="start"
-        android:layout_marginBottom="7dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="2dp"
+
         android:background="@drawable/border">
 
         <ImageView
@@ -23,20 +24,14 @@ android:orientation="vertical">
             android:src="@drawable/back_icon"
             android:layout_gravity="center_vertical"/>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/groupImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="12dp"
-            tools:srcCompat="@tools:sample/avatars"
-            tools:ignore="MissingClass" />
 
         <TextView
             android:id="@+id/groupName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="7dp"
             android:text="Group Name"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:gravity="center_vertical"/>
     </LinearLayout>
@@ -52,7 +47,8 @@ android:orientation="vertical">
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:layout_marginBottom="10dp">
 
     <EditText
         android:id="@+id/messageInput"
