--- a/app/src/main/res/layout/item_receive.xml
+++ b/app/src/main/res/layout/item_receive.xml
@@ -6,24 +6,26 @@
     android:padding="8dp"
     android:layout_marginBottom="4dp">
 
-        <!-- اسم المرسل -->
+
         <TextView
             android:id="@+id/receveNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sender Name"
             android:textColor="#888888"
-            android:textSize="12sp"
+            android:textStyle="italic"
+            android:textSize="14sp"
             android:layout_marginBottom="4dp"/>
 
-        <!-- نص الرسالة -->
+
         <TextView
             android:id="@+id/recevmessageTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Message Text"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:background="@drawable/received_message_bg"
             android:padding="10dp"
             android:maxWidth="250dp"
@@ -31,13 +33,14 @@
             android:gravity="start"
             android:layout_marginBottom="4dp"/>
 
-        <!-- وقت الإرسال -->
+
         <TextView
             android:id="@+id/recevtimeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Time"
             android:textColor="#888888"
-            android:textSize="12sp"
+            android:textSize="10sp"
+            android:textStyle="bold"
             android:gravity="start"/>
 </LinearLayout>
