--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="743dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:orientation="vertical">
@@ -26,6 +26,7 @@
             <!-- EditText for Search -->
 
 
+
             <EditText
                 android:id="@+id/etSearch"
                 android:layout_width="393dp"
@@ -39,6 +40,17 @@
                 android:maxLines="1"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp" />
+            <!-- Notification Icon (Moved to Right) -->
+            <ImageView
+                android:id="@+id/imageViewnofification"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:src="@drawable/ic_notificationsoff"
+                android:contentDescription="Notifications"
+                android:padding="5dp"
+
+                android:scaleType="centerInside"/>
 
 
         </LinearLayout>
@@ -53,6 +65,7 @@
             android:textColor="@color/dark_blue"
             android:textSize="18sp"
             android:textStyle="bold" />
+
 
 
         <androidx.recyclerview.widget.RecyclerView
